syntax = "proto3";

package io.restorecommerce.file;

import "io/restorecommerce/image.proto";

message File {
  optional string id = 1;
  optional uint32 ordinal = 2;
  optional string caption = 3;
  optional string filename = 4;
  optional string content_type = 5;
  oneof type {
    string url = 6;
    string base64 = 7;
    bytes blob = 8;
  }
  optional int64 bytes = 9;
  repeated string tags = 10;
  optional io.restorecommerce.image.Image thumbnail = 11;
}

message FileList {
  repeated File items = 1;
  optional uint32 total_count = 2;
}

