syntax = "proto3";

package io.restorecommerce.product;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/image.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/attribute.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/manufacturer.proto";

service Service {
  option (io.restorecommerce.options.service_name) = "product";

  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ProductListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (ProductList) returns (ProductListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ProductList) returns (ProductListResponse);
  rpc Upsert (ProductList) returns (ProductListResponse);
}

message Volume {
  double width_in_cm = 1;
  double height_in_cm = 2;
  double length_in_cm = 3;
  double weight_in_kg = 4;
}

// Product resource
message MainProduct {
  string id = 1;
  oneof product_type {
    Product product = 2;
    Bundle bundle = 3;
  }
  bool active = 4;
  io.restorecommerce.meta.Meta meta = 5;
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  string manufacturer_id = 4 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.manufacturer.Manufacturer",
      target_service: "catalog",
      target_sub_service: "manufacturer",
      target_method: "Read",
      field_name: "manufacturer",
    }
  ];
  string taric_code = 5;
  oneof classification {
    Identifier prototype = 6;
    Identifier category = 7;
  }
  repeated string tax_ids = 8;
  
  string gtin = 9;
  oneof nature {
    PhysicalProduct physical = 10;
    VirtualProduct virtual = 11;
  };
}

message PhysicalProduct {
  repeated PhysicalVariant variants = 1;
}

message VirtualProduct {
  repeated VirtualVariant variants = 1;
}

message Identifier {
  string id = 1;
}

message ProductList {
  repeated MainProduct items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message ProductListResponse {
  repeated ProductResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ProductResponse {
  MainProduct payload = 1;
  io.restorecommerce.status.Status status = 3;
}

message PhysicalVariant {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 stock_level = 4;
  double price = 5;
  bool sale = 6;
  double sale_price = 7;
  repeated io.restorecommerce.image.Image image = 8;
  string stock_keeping_unit = 9;
  string template_variant = 10;
  Volume packing_volume = 11;
  repeated io.restorecommerce.attribute.Attribute attributes = 12;
}

message VirtualVariant {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 stock_level = 4;
  double price = 5;
  bool sale = 6;
  double sale_price = 7;
  repeated io.restorecommerce.image.Image image = 8;
  string stock_keeping_unit = 9;
  string template_variant = 10;
  repeated io.restorecommerce.attribute.Attribute attributes = 11;
}

message Bundle {
  string id = 1;
  string name = 3;
  string description = 4;
  repeated io.restorecommerce.image.Image image = 5;
  repeated BundleProduct products = 6;
  double price = 7;
}

message BundleProduct {
  string product_id = 1;
  string variant_id = 2;
  uint32 quantity = 3;
  double price_ratio = 4;
}

message VAT {
  string tax_id = 1;
  double vat = 2;
}

message Deleted {
  string id = 1;
}
