syntax = "proto3";

package io.restorecommerce.tax;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";
import "io/restorecommerce/options.proto";

// Used by resolvers
import "io/restorecommerce/country.proto";
import "io/restorecommerce/tax_type.proto";

/*
* Microservice definition.
*/
service TaxService {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (TaxListResponse) {
    option (io.restorecommerce.options.is_query) = true;
  };
  rpc Create (TaxList) returns (TaxListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (TaxList) returns (TaxListResponse);
  rpc Upsert (TaxList) returns (TaxListResponse);
}

enum RoundMode {
  HALF = 0;
  CEIL = 1;
  FLOOR = 2;
}

message TaxList {
  repeated Tax items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.auth.Subject subject = 3;
}

message TaxListResponse {
  repeated TaxResponse items = 1;
  optional uint32 total_count = 2;
  optional io.restorecommerce.status.OperationStatus operation_status = 3;
}

message TaxResponse {
  optional Tax payload = 1;
  optional io.restorecommerce.status.Status status = 2;
}

message Tax {
  optional string id = 1;
  optional io.restorecommerce.meta.Meta meta = 2;
  optional string country_id = 3 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.country.Country",
      target_service: "master_data",
      target_sub_service: "country",
      target_method: "Read",
      field_name: "country",
    }
  ];
  optional double rate = 4;
  optional string variant = 5;
  optional string type_id = 6 [
    (io.restorecommerce.options.resolver) = {
      target_type: ".io.restorecommerce.tax_type.TaxType",
      target_service: "master_data",
      target_sub_service: "tax_type",
      target_method: "Read",
      field_name: "type",
    }
  ];
  optional string name = 7;
  optional string abbreviation = 8;
  optional RoundMode round_mode = 9;
}
